--- a/android/WinIt/res/menu/menu_profile.xml
+++ b/android/WinIt/res/menu/menu_profile.xml
@@ -2,5 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 	<item
 	    android:id="@+id/menu_edit_profile"
-        android:title="@string/edit"/>    
+        android:title="@string/edit"/>
+	
+	<item
+        android:id="@+id/menu_settings"
+        android:title="@string/settings" />
+    
+    <item
+        android:id="@+id/menu_log_out"
+        android:title="@string/log_out" />
 </menu>
