--- a/android/WinIt/res/layout/quiz_pager.xml
+++ b/android/WinIt/res/layout/quiz_pager.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/blue"
-        android:textColor="@color/white"
+        android:background="@color/white"
+        android:textColor="@color/dark_gray"
         android:paddingTop="4dp"
         android:paddingBottom="4dp" />
 
