--- a/android/WinIt/res/layout/quiz_pager.xml
+++ b/android/WinIt/res/layout/quiz_pager.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1" >
     </android.support.v4.view.ViewPager>
 
-    <com.viewpagerindicator.LinePageIndicator
+    <com.viewpagerindicator.TitlePageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
