--- a/android/WinIt/res/layout/badges_activity.xml
+++ b/android/WinIt/res/layout/badges_activity.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+     <ListView
+      android:id="@+id/listBadges"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:listSelector="@drawable/list_selector" >
+    </ListView>
 
 </LinearLayout>
