--- a/android/WinIt/res/layout/popup_endquiz.xml
+++ b/android/WinIt/res/layout/popup_endquiz.xml
@@ -81,6 +81,7 @@
 	          	android:id="@+id/dismiss_button"
 	          	android:layout_width="match_parent"
 	          	android:layout_height="wrap_content"
+	          	android:background="#aaa"
 	          	android:text="Dismiss"
 	          	android:textAllCaps="true"
 	          	android:textColor="@color/white"
