--- a/android/WinIt/res/layout/badges_list_row.xml
+++ b/android/WinIt/res/layout/badges_list_row.xml
@@ -32,7 +32,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/badge_description"
+        android:id="@+id/badge_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -42,7 +42,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/badges"
         android:textColor="@color/dark_gray"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="italic" />
 
 </RelativeLayout>
