--- a/android/WinIt/res/layout/dashboard_activity.xml
+++ b/android/WinIt/res/layout/dashboard_activity.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="@color/clouds"
     android:orientation="vertical"
     android:paddingTop="@dimen/gap2"
     android:paddingLeft="@dimen/gap2"
     android:paddingRight="@dimen/gap2"
-    android:weightSum="1" >
+    android:weightSum="1">
 
     <LinearLayout
         android:id="@+id/single_player_layout"
@@ -16,29 +16,30 @@
         android:layout_weight="0.25"
         android:onClick="handleRoomSelection"
         android:layout_marginBottom="@dimen/gap2"
-        style="@style/WhiteButtonAppTheme" >
+        android:background="@color/peter_river" >
 
-        <ImageView
-            android:layout_width="@dimen/dashboard_icon_size"
-            android:layout_height="@dimen/dashboard_icon_size"
+        <pt.techzebra.winit.widget.FixedAspectRatioImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:scaleType="centerInside"
             android:contentDescription=""
             android:src="@drawable/ic_single_player"
-            android:layout_marginLeft="@dimen/gap2" />
+            android:background="@color/belize_hole" />
 
         <TextView
             android:id="@+id/single_player_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="right"
+            android:gravity="left"
             android:text="@string/single_player"
             android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/dark_gray"
-            android:layout_marginRight="@dimen/gap2" />
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="@dimen/gap2" />
     </LinearLayout>
-
+    
     <LinearLayout
         android:id="@+id/cooperative_layout"
         android:layout_width="match_parent"
@@ -46,27 +47,28 @@
         android:layout_weight="0.25"
         android:onClick="handleRoomSelection"
         android:layout_marginBottom="@dimen/gap2"
-        style="@style/WhiteButtonAppTheme" >
+        android:background="@color/orange" >
 
-        <ImageView
-            android:layout_width="@dimen/dashboard_icon_size"
-            android:layout_height="@dimen/dashboard_icon_size"
+        <pt.techzebra.winit.widget.FixedAspectRatioImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:scaleType="centerInside"
             android:contentDescription=""
             android:src="@drawable/ic_cooperative"
-            android:layout_marginLeft="@dimen/gap2"  />
+            android:background="@color/carrot"  />
 
         <TextView
             android:id="@+id/cooperative_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="right"
+            android:gravity="left"
             android:text="@string/cooperative"
             android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/dark_gray"
-            android:layout_marginRight="@dimen/gap2" />
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="@dimen/gap2" />
     </LinearLayout>
 
     <LinearLayout
@@ -76,27 +78,28 @@
         android:layout_weight="0.25"
         android:onClick="handleRoomSelection"
         android:layout_marginBottom="@dimen/gap2"
-        style="@style/WhiteButtonAppTheme" >
+        android:background="@color/alizarin" >
 
-        <ImageView
-            android:layout_width="@dimen/dashboard_icon_size"
-            android:layout_height="@dimen/dashboard_icon_size"
+        <pt.techzebra.winit.widget.FixedAspectRatioImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:scaleType="centerInside"
             android:contentDescription=""
             android:src="@drawable/ic_competitive"
-            android:layout_marginLeft="@dimen/gap2"  />
+            android:background="@color/pomegranate"  />
 
         <TextView
             android:id="@+id/competitive_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="right"
+            android:gravity="left"
             android:text="@string/competitive"
             android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/dark_gray"
-            android:layout_marginRight="@dimen/gap2" />
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="@dimen/gap2" />
     </LinearLayout>
 
     <LinearLayout
@@ -106,27 +109,28 @@
         android:layout_weight="0.25"
         android:onClick="handleRoomSelection"
         android:layout_marginBottom="@dimen/gap2"
-        style="@style/WhiteButtonAppTheme" >
+        android:background="@color/emerland" >
 
-        <ImageView
-            android:layout_width="@dimen/dashboard_icon_size"
-            android:layout_height="@dimen/dashboard_icon_size"
+        <pt.techzebra.winit.widget.FixedAspectRatioImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:scaleType="centerInside"
             android:contentDescription=""
             android:src="@drawable/ic_trading"
-            android:layout_marginLeft="@dimen/gap2"  />
+            android:background="@color/nephritis"  />
 
         <TextView
             android:id="@+id/trading_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:gravity="right"
+            android:gravity="left"
             android:text="@string/trading"
             android:textAllCaps="true"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/dark_gray"
-            android:layout_marginRight="@dimen/gap2" />
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:layout_marginLeft="@dimen/gap2" />
     </LinearLayout>
 
 </LinearLayout>
