--- a/android/WinIt/res/layout/edit_profile_activity.xml
+++ b/android/WinIt/res/layout/edit_profile_activity.xml
@@ -4,7 +4,7 @@
     android:id="@+id/scrollview1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray" >
+    android:background="@color/clouds" >
     
 	<RelativeLayout
 	    android:layout_width="match_parent"
