--- a/android/WinIt/res/layout/popup_endquiz.xml
+++ b/android/WinIt/res/layout/popup_endquiz.xml
@@ -10,7 +10,7 @@
 	     android:layout_height="wrap_content"
 	     android:orientation="vertical" 
 	     android:layout_margin="1dp"
-	     android:background="@color/light_gray">
+	     android:background="@color/clouds">
 	     
 	     <LinearLayout 
 	         android:layout_width="wrap_content"
