--- a/android/WinIt/res/layout/profile_activity.xml
+++ b/android/WinIt/res/layout/profile_activity.xml
@@ -137,8 +137,9 @@
             <ImageView
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_promotions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp" />
 
             <TextView
                 android:gravity="center_horizontal"
@@ -172,8 +173,9 @@
             <ImageView
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_badges"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp" />
 
             <TextView
                 android:gravity="center_horizontal"
@@ -207,8 +209,9 @@
             <ImageView
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_tags"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp" />
 
             <TextView
                 android:gravity="center_horizontal"
