--- a/android/WinIt/res/values/colors.xml
+++ b/android/WinIt/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_gray">#e7e7e7</color>
-    <color name="gray">#aaaaaa</color>
-    <color name="dark_gray">#505050</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    
+    <color name="clouds">#ecf0f1</color>
+    <color name="silver">#bdc3c7</color>
+    <color name="concrete">#95a5a6</color>
+    <color name="asbestos">#7f8c8d</color>
+    
+    <color name="sun_flower">#f1c40f</color>
+    <color name="orange">#f39c12</color>
+    <color name="carrot">#e67e22</color>
+    <color name="pumpkin">#d35400</color>
+        
+    <color name="alizarin">#e74c3c</color>
+    <color name="pomegranate">#c0392b</color>
+    
+    <color name="emerland">#2ecc71</color>
+    <color name="nephritis">#27ae60</color>
+    
+    <color name="gray">#aaaaaa</color>
+    <color name="dark_gray">#505050</color>
+    
     <color name="blue">#33b5e5</color>
     <color name="dark_blue">#0099cc</color>
     <color name="purple">#aa66cc</color>
@@ -15,6 +32,7 @@
     <color name="dark_red">#cc0000</color>
     <color name="green">#99cc00</color>
     <color name="dark_green">#669900</color>
+    
     <color name="turquoise">#1abc9c</color>
     <color name="green_sea">#16a085</color>
     <color name="midnight_blue">#2c3e50</color>
@@ -22,4 +40,9 @@
     <color name="peter_river">#3498db</color>
     <color name="belize_hole">#2980b9</color>
     
+    <color name="top_item">#a6c</color>
+    <color name="sticky_item">#fff</color>
+    <color name="sticky_item_text">#09c</color>
+    <color name="bottom_item">#f44</color>
+    <color name="bottom_item_alt">#c00</color>
 </resources>
