--- a/android/WinIt/res/layout/my_promotions_activity.xml
+++ b/android/WinIt/res/layout/my_promotions_activity.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <com.origamilabs.library.views.StaggeredGridView
-      android:id="@+id/listMyPromotions"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:listSelector="@drawable/list_selector" />
-</LinearLayout>
+    android:background="@color/light_gray" >
+</android.support.v4.view.ViewPager>
