--- a/android/WinIt/res/layout/my_promotions_activity.xml
+++ b/android/WinIt/res/layout/my_promotions_activity.xml
@@ -3,5 +3,6 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray" >
+    android:background="@color/clouds" >
+
 </android.support.v4.view.ViewPager>
