--- a/android/WinIt/res/layout/trading_promotions_to_trade.xml
+++ b/android/WinIt/res/layout/trading_promotions_to_trade.xml
@@ -6,7 +6,6 @@
     <ListView
       android:id="@+id/list"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:listSelector="@drawable/list_selector" >
+      android:layout_height="fill_parent" >
     </ListView>
 </LinearLayout>
