--- a/android/WinIt/res/layout/my_promotions_activity.xml
+++ b/android/WinIt/res/layout/my_promotions_activity.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pager"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/my_promotions_wrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/clouds" >
+    android:orientation="vertical" >
 
-</android.support.v4.view.ViewPager>
+    <com.astuetz.viewpager.extensions.PagerSlidingTabStrip
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="48dp" />
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/clouds" />
+
+</LinearLayout>
