--- a/android/WinIt/res/layout/my_promotions_fragment_2.xml
+++ b/android/WinIt/res/layout/my_promotions_fragment_2.xml
@@ -1,38 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.origamilabs.library.views.StaggeredGridView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/pt.techzebra.winit"
+    android:id="@+id/listMyPromotions2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/page_title2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="3dp"
-        android:text="@string/page"
-        android:textAllCaps="true"
-        android:textColor="@color/peter_river"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:id="@+id/section"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@+id/page_title2" >
-
-        <com.origamilabs.library.views.StaggeredGridView
-            xmlns:staggered="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/listMyPromotions2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            staggered:drawSelectorOnTop="false"
-            staggered:numColumns="2" >
-        </com.origamilabs.library.views.StaggeredGridView>
-    </LinearLayout>
-
-
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    app:drawSelectorOnTop="false"
+    app:numColumns="2" />
