--- a/android/WinIt/res/menu/menu_proposable.xml
+++ b/android/WinIt/res/menu/menu_proposable.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/menu_propose"
-        android:title="@string/propose"
+        android:title="@string/propose_trade"
         android:showAsAction="always" />
 </menu>
