--- a/android/WinIt/res/layout/edit_profile_activity.xml
+++ b/android/WinIt/res/layout/edit_profile_activity.xml
@@ -151,8 +151,24 @@
 	                android:src="@drawable/abs__ic_search_api_holo_light" />
 	        </LinearLayout>
 	
+	        
+	         <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif-light"
+                android:text="Address (Street)"
+                android:textColor="@color/dark_gray"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/location_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="-" />
+	        
 	        <TextView
-	            android:id="@+id/TextView02"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:paddingLeft="@dimen/gap"
