Lots of bug fixes

--- a/android/WinIt/res/layout/promotion_activity.xml
+++ b/android/WinIt/res/layout/promotion_activity.xml
@@ -52,6 +52,7 @@
                 android:visibility="gone" >
 
                 <TextView
+                    android:id="@+id/end_date_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/gap"
