--- a/android/WinIt/res/layout/authentication_activity.xml
+++ b/android/WinIt/res/layout/authentication_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res/pt.techzebra.winit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/peter_river"
+    android:background="@color/clouds"
     android:gravity="center_horizontal" >
 
     <LinearLayout
@@ -14,16 +14,12 @@
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
+        <ImageView
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gap2"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="28sp"
-            android:textStyle="bold" />
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/winit_logo"
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:id="@+id/slogan"
@@ -32,7 +28,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/gap"
             android:text="@string/slogan"
-            android:textColor="@color/white"
+            android:textColor="@color/asbestos"
             android:textSize="16sp" />
 
     </LinearLayout>
@@ -72,7 +68,7 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
             android:text="@string/or"
-            android:textColor="@color/white"
+            android:textColor="@color/asbestos"
             android:textStyle="italic" />
     </LinearLayout>
 
