--- a/android/WinIt/res/layout/profile_activity.xml
+++ b/android/WinIt/res/layout/profile_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/concrete" >
+    android:background="@color/peter_river" >
 
     <ScrollView
         android:id="@+id/scroll"
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/silver"
+                android:background="@color/belize_hole"
                 android:layout_marginTop="@dimen/gap2"
                 android:layout_marginBottom="@dimen/gap"
                 android:padding="@dimen/gap" >
