--- a/android/WinIt/res/values/colors.xml
+++ b/android/WinIt/res/values/colors.xml
@@ -19,6 +19,9 @@
     <color name="emerland">#2ecc71</color>
     <color name="nephritis">#27ae60</color>
     
+    <color name="amethyst">#9b59b6</color>
+    <color name="wisteria">#8e44ad</color>
+    
     <color name="gray">#aaaaaa</color>
     <color name="dark_gray">#505050</color>
     
