--- a/android/WinIt/res/layout/quiz_pager.xml
+++ b/android/WinIt/res/layout/quiz_pager.xml
@@ -10,8 +10,7 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
-    </android.support.v4.view.ViewPager>
+        android:layout_weight="1" />
 
     <com.viewpagerindicator.TitlePageIndicator
         android:id="@+id/indicator"
