--- a/android/WinIt/res/values/app_themes.xml
+++ b/android/WinIt/res/values/app_themes.xml
@@ -47,10 +47,10 @@
     </style>
 
     <style name="CustomCirclePageIndicator">
-        <item name="fillColor">#FF888888</item>
-        <item name="strokeColor">#FF000000</item>
-        <item name="strokeWidth">2dp</item>
-        <item name="radius">10dp</item>
+        <item name="fillColor">@color/white</item>
+        <item name="strokeColor">@color/silver</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="radius">5dp</item>
         <item name="centered">true</item>
     </style>
 
