--- a/android/WinIt/res/layout/signup_step1_fragment.xml
+++ b/android/WinIt/res/layout/signup_step1_fragment.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             android:text="@string/step1"
             android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textColor="@color/belize_hole"
             android:textSize="26sp"
             android:textStyle="bold" />
 
