--- a/android/WinIt/res/layout/profile_activity.xml
+++ b/android/WinIt/res/layout/profile_activity.xml
@@ -108,7 +108,8 @@
                     android:id="@+id/experience_bar"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:progressDrawable="@drawable/progress_bar_color" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
